feat: add images

--- a/content/technical/keys/hd-wallet.mdx
+++ b/content/technical/keys/hd-wallet.mdx
@@ -2,3 +2,5 @@
 title: HD 钱包
 description: Hierarchical Deterministic Wallets
 ---
+
+分层确定性钱包, 简称 HD 钱包, 是一种可以从单个种子生成所有私钥的钱包。这些私钥可以用于生成所有地址, 而无需在区块链上存储任何东西。这意味着您可以安全地备份种子, 而无需担心钱包中的资金。
