--- a/content/technical/keys/hd-wallet.mdx
+++ b/content/technical/keys/hd-wallet.mdx
@@ -192,16 +192,17 @@ if (index < 2147483648) {
 - 通过助记词生成 `seed`
 - 通过 `seed` 生成主拓展秘钥
 - 通过主拓展秘钥生成多层子密钥
-
-:::warning
-
-使用助记词生成 `seed` 时, 更安全的做法是设置 `passphrase`, 这样即使助记词泄露, 也无法生成 `seed`。
-
-:::
+- 每个子密钥对应一个比特币账户
 
 :::danger
 
 助记词的目的是为了提供一种更友好的方式来记忆 `seed`。 如果你有更安全且方便的方法来保存 `seed`, 那么助记词就不是必须的。
+
+:::
+
+:::warning
+
+使用助记词生成 `seed` 时, 更安全的做法是设置 `passphrase`, 这样即使助记词泄露, 也无法生成 `seed`。
 
 :::
 
