--- a/content/technical/keys/psbt.mdx
+++ b/content/technical/keys/psbt.mdx
@@ -2,4 +2,4 @@
 title: PSBT
 ---
 
-[BIP174](https://github.com/bitcoin/bips/blob/master/bip-0174.mediawiki) 定义了 `PSBT` 标准, 全称是 `Partially Signed Bitcoin Transaction Format`, 是一种用于多签交易的签名格式, 便于在不同参与者之间传递和更新比特币交易信息。
+[BIP174](https://github.com/bitcoin/bips/blob/master/bip-0174.mediawiki) 定义了 `PSBT` 标准, 全称是 `Partially Signed Bitcoin Transaction Format`, 是一种用于多签交易的签名格式, 便于在不同参与者之间传递和更新比特币交易信息, 而无需将私钥暴露给其他参与者。
