--- a/content/technical/script/p2sh.mdx
+++ b/content/technical/script/p2sh.mdx
@@ -70,13 +70,21 @@ OP_HASH160 \<脚本哈希> OP_EQUAL
 
 :::danger
 
-赎回脚本可以是任何有效的脚本，包括非标准脚本。只要在执行结束时栈上有且只有一个 `OP_1`, 则解锁脚本有效。
+- 赎回脚本可以是任何有效的脚本，包括非标准脚本。只要在执行结束时栈上有且只有一个 `OP_1`, 则解锁脚本有效。
+
+- 赎回脚本最大为 **520** 个字节。
 
 :::
 
-:::tip
+:::tip P2SH-P2MS
 
-赎回脚本最大为 **520** 个字节。若将 `P2MS` 作为赎回脚本, 压缩公钥大小为 33 字节, 则最多支持 15 个公钥。
+`P2SH` 最常见的应用场景是多签, 即将 `P2MS` 作为赎回脚本。
+
+- `P2MS` 输出的锁定脚本包含多个原始公钥信息, 无疑会增加交易的大小, 从而增加交易费用。而使用 `P2SH-P2MS` 可以用多个公钥信息构建赎回脚本, 交易输出中只需存储赎回脚本哈希, 从而减小交易大小, 降低交易费用。
+
+- `P2MS` 最多支持 3 个公钥, 而由于单个压缩公钥大小为 33 字节字节, `P2SH-P2MS` 赎回脚本最多支持 15 个公钥。
+
+花费时, `P2MS` 解锁脚本只需要提供需要的多个签名即可。而 `P2SH-P2MS` 除了必须的多个签名外, 还需要提供完整的赎回脚本。 因此在花费时, `P2SH-P2MS` 会比 `P2MS` 需要更多的交易费用。
 
 :::
 
