feat: update secret

--- a/content/technical/keys/secret.mdx
+++ b/content/technical/keys/secret.mdx
@@ -36,19 +36,19 @@ title: 私钥和地址
 
 - `P2SH` 地址在主网上总是以 `3` 开头, 测试网上总是以 `2` 开头。
 
-:::tip
-
-如果将比特币发送到 `P2PKH` 地址, 需要用 公钥哈希(**Hash160**) 创建一个 P2PKH 锁定脚本。
-
-`base58` 地址格式也用于 `P2SH` 锁定脚本, 不同的是 `P2SH` 使用的是脚本哈希
-
-:::
-
 :::note Base58Check
 
 从 Step 2 到 Step 4 这整个过程称作 `Base58Check` 编码。
 
 相比于单一的 `Base58` 编码, `Base58Check` 添加了版本前缀, 可以快速识别不同的地址类型, 另外添加校验和也保证了数据的完整性和安全性。
+
+:::
+
+:::tip
+
+如果将比特币发送到 `P2PKH` 地址, 通过 `Base58Check` 解码, 可计算出 `公钥哈希` 并创建创建一个 `P2PKH` 锁定脚本。
+
+`Base58` 地址格式也用于 `P2SH` 锁定脚本, 不同的是 `P2SH` 使用的是脚本哈希
 
 :::
 
