fix: subsidy text

--- a/content/technical/miner/coinbase-transaction.mdx
+++ b/content/technical/miner/coinbase-transaction.mdx
@@ -54,7 +54,7 @@ title: Coinbase 交易
 ]
 ```
 
-可以看出, 有两个输出的金额不为零, 一个输出的金额为零。在一笔交易中, 只允许一个金额为0的输出(该输出不能作为交易的输入)。另外两个金额不为零的输出用来领取区块补跌和手续费。
+可以看出, 有两个输出的金额不为零, 一个输出的金额为零。在一笔交易中, 只允许一个金额为0的输出(该输出不能作为交易的输入)。另外两个金额不为零的输出用来领取区块补贴和手续费。
 
 尽管交易输入中的 `txid`为 0, 但却能产生金额不为零的 `UTXO`。这正是能够产生新的比特币的原因。
 
@@ -62,7 +62,7 @@ title: Coinbase 交易
 
 区块奖励来源于两部分:
 
-1. **区块补贴** - 新挖出的比特币, 在比特币网络中, 每 210000 个区块, 区块补贴减半。在一个补跌周期内, 每个区块的区块补跌都是相同的。
+1. **区块补贴** - 新挖出的比特币, 在比特币网络中, 每 210000 个区块, 区块补贴减半。在一个补跌周期内, 每个区块的区块补贴都是相同的。
 
 <HalvingTable />
 
