--- a/content/cryptology/ecc/ecc.mdx
+++ b/content/cryptology/ecc/ecc.mdx
@@ -1,3 +1,11 @@
 ---
 title: ECC
 ---
+
+椭圆曲线加密算法(Elliptic curve cryptography)简称 ECC, 是一种非对称加密算法。方程式为
+
+$$
+y^2 = x^3 + ax +b，4a^3 + 27b^2 \neq 0
+$$
+
+<EccGraph />
