--- a/content/cryptology/ecc/ecc.mdx
+++ b/content/cryptology/ecc/ecc.mdx
@@ -7,25 +7,24 @@ title: ECC
 椭圆曲线加密算法(Elliptic curve cryptography)简称 ECC, 是一种非对称加密算法。方程式为
 
 $$
-y^2 = x^3 + ax +b，4a^3 + 27b^2 \neq 0
+y^2 = x^3 + ax +b, \ 4a^3 + 27b^2 \neq 0
 $$
 
 不同的参数 a 和 b 会产生不同的曲线，如下图所示
 
-<EccGraph />
+<EccGraph variable={true} />
 
-从图中可以看出，椭圆曲线是关于 `x` 轴对称的一条曲线。
+从图中可以看出，椭圆曲线关于 $X$ 轴对称。
 
 需要注意的是 $a$ 和 $b$ 须满足条件 $4a^3 + 27b^2 \neq 0$，这个条件确保了曲线的光滑，即曲线中不存在尖点，自相交点和孤立点，从而保证曲线上的点都有切线。
 
 ## 四则运算
 
-椭圆曲线的四则运算不同于代数中的四则运算。其有自己的运算法则。
+椭圆曲线的四则运算不同于代数中的四则运算。
 
 <EccGraph
   initA={-3}
   initB={1}
-  variable={false}
   disableZoom={true}
   fnData={[
     {
@@ -43,30 +42,195 @@ $$
       color: 'blue'
     },
     {
-      points: [
-        [1.864, -10],
-        [1.864, 10]
-      ],
-      fnType: 'points',
-      graphType: 'polyline',
-      color: 'red'
+      graphType: 'text',
+      location: [-1.824, 0.6352],
+      text: 'P',
+      color: 'blue',
+      attr: {
+        dy: -5,
+        dx: -8,
+        fill: 'blue'
+      }
+    },
+    {
+      graphType: 'text',
+      location: [0, 1],
+      text: 'Q',
+      color: 'blue',
+      attr: {
+        dy: -6,
+        dx: 3,
+        fill: 'blue'
+      }
+    },
+    {
+      graphType: 'text',
+      location: [1.864, 1.3728],
+      text: 'R',
+      color: 'blue',
+      attr: {
+        dy: -8,
+        dx: -8,
+        fill: 'blue'
+      }
+    },
+    {
+      graphType: 'text',
+      location: [1.864, -1.3728],
+      text: `R'`,
+      attr: {
+        dy: -5,
+        dx: 5,
+        fill: '#ff0000'
+      }
     }
   ]}
   annotations={[
     {
-      x: 1.864,
-      y: 1.3728,
-      text: 'P'
-    },
-    {
-      x: -1.824,
-      y: 0.6352,
-      text: 'Q'
-    },
-    {
-      x: 1.864,
-      y: -1.3728,
-      text: 'R'
+      x: 1.864
     }
   ]}
 />
+
+已知椭圆曲线上的点 $P$ 和点 $Q$, 过这两点做直线，与椭圆曲线相交于第三个点 $R$, 做点 $R$ 与 $X$ 轴的对称点 $R'$ 。这个 $R'$ 点就是 $P$ 和 $Q$ 相加的结果, 即 $P + Q = R'$
+
+当 $P=Q$ 时，相当于过点 $P$ 做曲线的切线，相交于点$R$, $R$ 关于 $X$ 轴的对称点 $R'$ 就是相加得到的点。 $P + P = 2P = R'$
+
+<EccGraph
+  initA={-3}
+  initB={1}
+  disableZoom={true}
+  fnData={[
+    {
+      fn: '0.2 * x + 1.94315'
+    },
+    {
+      graphType: 'scatter',
+      fnType: 'points',
+      points: [
+        [-1.10664, 1.72182],
+        [2.25767, 2.39468],
+        [2.25767, -2.39468]
+      ],
+      color: 'blue'
+    },
+    {
+      graphType: 'text',
+      location: [-1.10664, 1.72182],
+      text: 'P(Q)',
+      color: 'blue',
+      attr: {
+        dy: -5,
+        dx: -8,
+        fill: 'blue'
+      }
+    },
+    {
+      graphType: 'text',
+      location: [2.25767, 2.39468],
+      text: 'R',
+      color: 'blue',
+      attr: {
+        dy: -8,
+        dx: -8,
+        fill: 'blue'
+      }
+    },
+    {
+      graphType: 'text',
+      location: [2.25767, -2.39468],
+      text: `R'`,
+      attr: {
+        dy: -5,
+        dx: 5,
+        fill: '#ff0000'
+      }
+    }
+  ]}
+  annotations={[
+    {
+      x: 2.25767
+    }
+  ]}
+/>
+
+## 有限域椭圆曲线
+
+在实数域上的椭圆曲线具有连续性的, 这种连续性并不适用于安全加密。采用**取模**的方式将椭圆曲线的运算结果固定在一个范围内变成离散的点。
+
+这种包含有限个元素的域称为有限域, 记作$GF{(p)}$ 或 $𝔽_p$, 其中 $p$ 是素数, 表示
+
+表示有限域上椭圆曲线的点的 $X$ 和 $Y$ 坐标的值被限定在 $\{0,1,2,3...,p-1\}$ 中。
+
+取模 $p$ 的有限域椭圆曲线方程为 $y^2 = x^3 + ax + b \mod p$, 记作 $E_{p}(a,b)$。例如: $E_{5}(1, 1): y^2 = x^3 + x + 1\ mod\ 5$
+
+计算有限域椭圆曲线上的点时, 首先是确定 $p$ 的值。然后通过 $x$ 的值计算 $y$ 的值，如果 $y$ 的值不在 $0$ 到 $p-1$ 之间，则取模 $p$。
+
+<FiniteEccGraph />
+
+例如 $E_{5}(1, 1): y^2 = x^3 +x + 1\ mod\ 5, 𝔽_5=\{0, 1, 2, 3, 4\}$,
+
+由于 $x$ 和 $y$ 的取值是在有限域中整数，因此对于上式中有多个可组合的点：
+
+- $x=0, y=1$, 等式两边值为 $y^2=1$ 和 $x^3 +x + 1 = 1$, 各对 5 取模结果都为 1, 该点有效
+- $x = 0, y = 2$, 等式左边对 5 取模结果为 4, 等式右边对 5 取模结果为 1, 该点无效
+- $x = 0, y = 4$, 等式两边对 5 取模结果都为 1, 该点有效
+
+如此遍历下去，便能确定最终的有效点为$(0, 1)\ (0,4)\ (2, 1)\ (2, 4), \ (3, 1)\ (3, 4)\ (4,2)\ (4,3)$
+
+### 加法
+
+有限域椭圆曲线的点相加是椭圆曲线密码学的核心。
+
+已知点 $P(x_1, y_1)$ 和点 $Q(x_2, y_2)$ 是有限域椭圆曲线上的两个点, 计算这两个点的和 $P + Q$ 的步骤如下：
+
+计算斜率 $m = \frac{y_2 - y_1}{x_2 - x_1} \ mod \ p$, 如果 $P = Q$，则 $m = \frac{3x_1^2 + a}{2y_1} \ mod \ p$
+
+在实数域上的椭圆曲线加法, 需要计算 $P$ 和 $Q$ 连接的直线与椭圆曲线的交点 `R`, 在有限域椭圆曲线上, 计算 `R(x, y)` 坐标的过程如下：
+
+$x = m^2 - x_1 - x_2 \ mod \ p$
+
+$y = m(x_1 - x) - y_1 \ mod \ p$
+
+$P'$ 是 $R$ 的对称点, 即 $P + Q = P'$
+
+### 乘法
+
+在实数域中的乘法定义为：$nP = P + P +\cdots + P$, 对$P$逐次累加计算。在有限域中同样可以这样计算。
+
+但在有限域中椭圆曲线中的乘法会存在一个循环，例如存在有限域椭圆曲线$E_{97}(2, 3): y^2=x^3+2x+3 \ mod\ 97$ 和点$P(3, 6)$
+
+- $0P = 0$
+- $1P = (3, 6)$
+- $2P = P + P = (80, 10)$
+- $3P=2P+P=(80, 87)$
+- $4P=3P+P(3, 91)$
+- $5P = 4P+P=0$
+- $6P=5P+P=(3, 6)$
+- $7P =6P+P =(80, 10)$
+- $\cdots$
+
+点$P(3, 6)$ 的循环次数为 5, 以及循环计算得到的点集称循环子群。该点集的数量就叫做阶。即 5 是点$P(3,6)$的阶。
+
+已知一个点的坐标, 求出该点的阶可以遵循下面的步骤
+
+- 计算椭圆曲线的阶$N$ （上面定义了阶是点集的数量，因此$N$ 就是有限域上椭圆曲线的有效点的数量）
+- 找出$N$的所有因子
+- 对每个因子计算$nP$
+- 找到最小的且满足 $nP=0$ 的$n$, $n$ 就是子群的阶
+
+对于椭圆曲线$E_{37}(-1, 3): y^2=x^3-x+3 \ mod\ 37$
+
+<FiniteEccGraph
+  a={-1}
+  b={3}
+  p={37}
+/>
+
+共有 42 个点，因此 $N = 42$。42 的因子有 $1,2,3,6,7,14,21,42$ 依次与点$P(2,3)$ 相乘
+
+$1P\neq 0, 2P\neq0,\cdots,7P=0$, 因此$P$的阶是 7。
+
+## 公私钥
+
+在椭圆曲线加密算法中，给定椭圆曲线$E$, 基点$G$，可以很容易算出$G$的阶$n$，然后在$\{1,\cdots,n-1\}$ 中随机选择一个整数$k$ 作为私钥，公钥$H=kG$
