--- a/content/cryptology/ecc/ecc.mdx
+++ b/content/cryptology/ecc/ecc.mdx
@@ -16,11 +16,15 @@ $$
 
 从图中可以看出，椭圆曲线关于 $X$ 轴对称。
 
-需要注意的是 $a$ 和 $b$ 须满足条件 $4a^3 + 27b^2 \neq 0$，这个条件确保了曲线的光滑，即曲线中不存在尖点，自相交点和孤立点，从而保证曲线上的点都有切线。
+需要注意的是 $a$ 和 $b$ 须满足条件 $4a^3 + 27b^2 \neq 0$, 这个条件确保了曲线的光滑, 即曲线中不存在尖点，自相交点和孤立点, 从而保证曲线上的点都有切线。
 
-## 四则运算
+## 加法运算
 
-椭圆曲线的四则运算不同于代数中的四则运算。
+椭圆曲线的加法运算指曲线上的两个点相加得到第三个点的过程。有几种不同的情况:
+
+### 点加
+
+已知椭圆曲线上的点 $P$ 和点 $Q$, 过这两点做直线，与椭圆曲线相交于第三个点 $R$, 做点 $R$ 与 $X$ 轴的对称点 $R'$ 。这个 $R'$ 点就是 $P$ 和 $Q$ 相加的结果, 即 $P + Q = R'$
 
 <EccGraph
   initA={-3}
@@ -92,7 +96,38 @@ $$
   ]}
 />
 
-已知椭圆曲线上的点 $P$ 和点 $Q$, 过这两点做直线，与椭圆曲线相交于第三个点 $R$, 做点 $R$ 与 $X$ 轴的对称点 $R'$ 。这个 $R'$ 点就是 $P$ 和 $Q$ 相加的结果, 即 $P + Q = R'$
+假设 $P = (x_1, y_1)$, $Q = (x_2, y_2)$, 点 $P$ 和 $Q$ 所在直线的斜率是 $m = \frac{y_2 - y_1}{x_2 - x_1}$,
+
+根据点斜式 $y - y_1 = m(x - x_1)$, 得到直线方程 $y = m(x - x_1) + y_1$
+
+椭圆曲线方程与直线方程联立:
+
+$$
+\begin{aligned}
+(m(x - x_1) + y_1)^2=x^3+ax+b \\
+
+m^2(x-x_1)^2+2y_1m(x-x_1)+y_1^2=x^3+ax+b \\
+
+m^2(x^2-2xx_1+x_1^2)+2y_1m(x-x_1)+y_1^2=x^3+ax+b \\
+
+m^2x^2-2xx_1m^2+m^2x_1^2+2y_1mx-2y_1mx_1+y_1^2=x^3+ax+b \\
+
+x^3+ax+b-m^2x^2+2xx_1m^2-m^2x_1^2-2y_1mx+2y_1mx_1-y_1^2=0 \\
+
+x^3-m^2x^2+(a + 2x_1m^2-2y_1m)x + (b - m^2x_1^2 +2y_1mx_1 - y_1^2) = 0
+
+\end{aligned}
+$$
+
+对于三次方程$x^3+px^2+qx+r=0$, 根据韦达定理,其根 $x_1, x_2, x_3$ 满足 $x_1+x_2+x_3=-p$
+
+最后的推导中 $p=m^2$, 故 $x_3=m^2-x_1-x_2$, 代入得到 $y_3=m(x_3-x_1)+y_1$
+
+得到 $x_3 = m^2 - x_1 - x_2$, $y_3 = m(x_3 - x_1) + y_1$
+
+最终 $R' = (x_3, -y_3) = (m^2 - x_1 - x_2, m(x_1 - x_3) - y_1)$
+
+### 点倍乘
 
 当 $P=Q$ 时，相当于过点 $P$ 做曲线的切线，相交于点$R$, $R$ 关于 $X$ 轴的对称点 $R'$ 就是相加得到的点。 $P + P = 2P = R'$
 
@@ -154,19 +189,73 @@ $$
   ]}
 />
 
+应用隐函数求导计算切线斜率 <InlineMath formula='m = \frac{3x_1^2 + a}{2y_1}'/>, 其余部分的计算同上。
+
+### 逆元
+
+当 $Q=-P$ 时，即 $Q$ 是 $P$ 在椭圆曲线上关于 $X$ 轴的对称点，此时过这两点做直线。没有相交的第三个点。则 $P + Q = P + (-P) = O$
+
+点 $O$ 是一个无穷远点，也叫加法的单位元。曲线上任意点与单位元相加都等于其自身。 $P + O = P$
+
+<EccGraph
+  initA={-3}
+  initB={1}
+  disableZoom={true}
+  fnData={[
+    {
+      graphType: 'scatter',
+      fnType: 'points',
+      points: [
+        [-1.10664, 1.72182],
+        [-1.10664, -1.72182]
+      ],
+      color: 'blue'
+    },
+    {
+      graphType: 'text',
+      location: [-1.10664, 1.72182],
+      text: 'P',
+      color: 'blue',
+      attr: {
+        dy: -5,
+        dx: -10,
+        fill: 'blue'
+      }
+    },
+    {
+      graphType: 'text',
+      location: [-1.10664, -1.72182],
+      text: 'Q',
+      color: 'blue',
+      attr: {
+        dy: -5,
+        dx: -10,
+        fill: 'blue'
+      }
+    }
+  ]}
+  annotations={[
+    {
+      x: -1.10664
+    }
+  ]}
+/>
+
 ## 有限域椭圆曲线
 
 在实数域上的椭圆曲线具有连续性的, 这种连续性并不适用于安全加密。采用**取模**的方式将椭圆曲线的运算结果固定在一个范围内变成离散的点。
 
-这种包含有限个元素的域称为有限域, 记作$GF{(p)}$ 或 $𝔽_p$, 其中 $p$ 是素数, 表示
+椭圆曲线上的坐标 $x$ 和 $y$ 都是整数, 取值在包含有限个元素的有限域中, 记作$GF_{(p)}$ 或 $𝔽_p$, 其中 $p$ 是素数。
 
-表示有限域上椭圆曲线的点的 $X$ 和 $Y$ 坐标的值被限定在 $\{0,1,2,3...,p-1\}$ 中。
+例如 $𝔽_5=\{0, 1, 2, 3, 4\}$, 表示 $x$ 和 $y$ 坐标的值只能是 $\{0,1,2,3,4\}$ 中的一个。
 
 取模 $p$ 的有限域椭圆曲线方程为 $y^2 = x^3 + ax + b \mod p$, 记作 $E_{p}(a,b)$。例如: $E_{5}(1, 1): y^2 = x^3 + x + 1\ mod\ 5$
 
-计算有限域椭圆曲线上的点时, 首先是确定 $p$ 的值。然后通过 $x$ 的值计算 $y$ 的值，如果 $y$ 的值不在 $0$ 到 $p-1$ 之间，则取模 $p$。
+计算有限域椭圆曲线上的点时, 首先是确定 $p$ 的值。然后通过 $x$ 的值计算 $y$ 的值，如果 $y$ 的值不在 $0$ 到 $p-1$ 之间, 则为无效点。
 
 <FiniteEccGraph />
+
+从图中可以看出, 相同 $x$ 坐标, 在 $p$ 的范围内会有一个关于 $\frac {p}{2}$ 的对称点。
 
 例如 $E_{5}(1, 1): y^2 = x^3 +x + 1\ mod\ 5, 𝔽_5=\{0, 1, 2, 3, 4\}$,
 
@@ -178,46 +267,61 @@ $$
 
 如此遍历下去，便能确定最终的有效点为$(0, 1)\ (0,4)\ (2, 1)\ (2, 4), \ (3, 1)\ (3, 4)\ (4,2)\ (4,3)$
 
-### 加法
+### 点加
 
-有限域椭圆曲线的点相加是椭圆曲线密码学的核心。
+有限域椭圆曲线的点加是椭圆曲线密码学的核心。
 
 已知点 $P(x_1, y_1)$ 和点 $Q(x_2, y_2)$ 是有限域椭圆曲线上的两个点, 计算这两个点的和 $P + Q$ 的步骤如下：
 
-计算斜率 $m = \frac{y_2 - y_1}{x_2 - x_1} \ mod \ p$, 如果 $P = Q$，则 $m = \frac{3x_1^2 + a}{2y_1} \ mod \ p$
+计算斜率 <InlineMath formula='m = \frac{y_2 - y_1}{x_2 - x_1} \ mod \ p'/>, 如果 $P = Q$，则 <InlineMath formula='m = \frac{3x_1^2 + a}{2y_1} \ mod \ p'/>
 
-在实数域上的椭圆曲线加法, 需要计算 $P$ 和 $Q$ 连接的直线与椭圆曲线的交点 `R`, 在有限域椭圆曲线上, 计算 `R(x, y)` 坐标的过程如下：
+在实数域上的椭圆曲线加法, 需要计算 $P$ 和 $Q$ 连接的直线与椭圆曲线的交点 `R`, 在有限域椭圆曲线上同理。
 
-$x = m^2 - x_1 - x_2 \ mod \ p$
+假设有限域椭圆曲线$E_{127}(-1, 3): y^2=x^3 -x +3 \ mod \ 127$
 
-$y = m(x_1 - x) - y_1 \ mod \ p$
+点$P=(16, 20)$, 点$Q =(41,120)$ 求 $P+Q$ 的坐标点$R'(x'， y')$
 
-$P'$ 是 $R$ 的对称点, 即 $P + Q = P'$
+首先计算连接$P$ 和 $Q$ 直线的斜率$m = \frac {y_P - y_Q}{x_P - x_Q} \mod \ p= \frac {20-120}{16-41} \mod \ 127=4 \mod\ 127 = 4$
 
-### 乘法
+接着计算直线和曲线相交的第三个点的坐标$R(x, y)$, 按照之前推导的公式:
+
+$x_R = m^2 - x_P - x_Q \ mod\ p = 16-16-41 \ mod\ 127 = -41 \ mod\ 127 = 86$
+
+$y_R= m(x_R-x_P) + y_P  \ mod\ p = 4(86 - 16) + 20 \ mod\ 127 = 300\ mod\ 127 = 46$
+
+$R'$ 是 $R$ 关于 $X$ 轴的对称点，所以
+
+<InlineMath formula={`x_{R'} = x_R = 86`} />, <InlineMath
+  formula={`y_{R'} = -y_R \ mod \ p = -46 \ mod \ 127 = 81`}
+/>
+
+所以 $P+Q = (86, 81)$
+
+### 倍乘
 
 在实数域中的乘法定义为：$nP = P + P +\cdots + P$, 对$P$逐次累加计算。在有限域中同样可以这样计算。
 
-但在有限域中椭圆曲线中的乘法会存在一个循环，例如存在有限域椭圆曲线$E_{97}(2, 3): y^2=x^3+2x+3 \ mod\ 97$ 和点$P(3, 6)$
+但在有限域中椭圆曲线中的乘法会存在一个循环。
 
-- $0P = 0$
+例如: 有限域椭圆曲线$E_{97}(2, 3): y^2=x^3+2x+3 \ mod\ 97$ 和点$P(3, 6)$
+
 - $1P = (3, 6)$
 - $2P = P + P = (80, 10)$
 - $3P=2P+P=(80, 87)$
 - $4P=3P+P(3, 91)$
-- $5P = 4P+P=0$
+- $5P = 4P+P=O$
 - $6P=5P+P=(3, 6)$
 - $7P =6P+P =(80, 10)$
 - $\cdots$
 
 点$P(3, 6)$ 的循环次数为 5, 以及循环计算得到的点集称循环子群。该点集的数量就叫做阶。即 5 是点$P(3,6)$的阶。
 
-已知一个点的坐标, 求出该点的阶可以遵循下面的步骤
+另一种更简单的计算方式是:
 
-- 计算椭圆曲线的阶$N$ （上面定义了阶是点集的数量，因此$N$ 就是有限域上椭圆曲线的有效点的数量）
-- 找出$N$的所有因子
-- 对每个因子计算$nP$
-- 找到最小的且满足 $nP=0$ 的$n$, $n$ 就是子群的阶
+- 计算椭圆曲线的阶 $N$ ($N$ 是有限域上椭圆曲线的有效点的数量)
+- 找出 $N$ 的所有因子
+- 对每个因子计算 $nP$
+- 找到最小的且满足 $nP=O$ 的 $n$, $n$ 就是该点的阶
 
 对于椭圆曲线$E_{37}(-1, 3): y^2=x^3-x+3 \ mod\ 37$
 
@@ -229,8 +333,8 @@ $P'$ 是 $R$ 的对称点, 即 $P + Q = P'$
 
 共有 42 个点，因此 $N = 42$。42 的因子有 $1,2,3,6,7,14,21,42$ 依次与点$P(2,3)$ 相乘
 
-$1P\neq 0, 2P\neq0,\cdots,7P=0$, 因此$P$的阶是 7。
+$1P\neq O, 2P\neq O,\cdots,7P=O$, 因此 $P$ 的阶是 7。
 
 ## 公私钥
 
-在椭圆曲线加密算法中，给定椭圆曲线$E$, 基点$G$，可以很容易算出$G$的阶$n$，然后在$\{1,\cdots,n-1\}$ 中随机选择一个整数$k$ 作为私钥，公钥$H=kG$
+在椭圆曲线加密算法中，给定椭圆曲线 $E$ 和 曲线上的点 $G$。 计算出 $G$ 的阶为 $n$, 之后在$\{1,\cdots,n-1\}$ 中随机选择一个整数 $k$ 作为私钥，公钥$H=kG$。$H$ 为曲线上的一个有效点。
