--- a/content/cryptology/ecc/ecc.mdx
+++ b/content/cryptology/ecc/ecc.mdx
@@ -24,7 +24,7 @@ $$
 
 ### 点加
 
-已知椭圆曲线上的点 $P$ 和点 $Q$, 过这两点做直线，与椭圆曲线相交于第三个点 $R$, 做点 $R$ 与 $X$ 轴的对称点 $R'$ 。这个 $R'$ 点就是 $P$ 和 $Q$ 相加的结果, 即 $P + Q = R'$
+已知椭圆曲线上的点 $P$ 和点 $Q$, 过这两点做直线，与椭圆曲线相交于第三个点 $R$, $R$ 关于 $X$ 轴的对称点 $R'$ 就是 $P$ 和 $Q$ 相加的结果, 即 $P + Q = R'$
 
 <EccGraph
   initA={-3}
@@ -98,7 +98,7 @@ $$
 
 假设 $P = (x_1, y_1)$, $Q = (x_2, y_2)$, 点 $P$ 和 $Q$ 所在直线的斜率是 $m = \frac{y_2 - y_1}{x_2 - x_1}$,
 
-根据点斜式 $y - y_1 = m(x - x_1)$, 得到直线方程 $y = m(x - x_1) + y_1$
+根据点斜式方程 $y - y_1 = m(x - x_1)$, 得到直线方程 $y = m(x - x_1) + y_1$
 
 椭圆曲线方程与直线方程联立:
 
@@ -122,8 +122,6 @@ $$
 对于三次方程$x^3+px^2+qx+r=0$, 根据韦达定理,其根 $x_1, x_2, x_3$ 满足 $x_1+x_2+x_3=-p$
 
 最后的推导中 $p=m^2$, 故 $x_3=m^2-x_1-x_2$, 代入得到 $y_3=m(x_3-x_1)+y_1$
-
-得到 $x_3 = m^2 - x_1 - x_2$, $y_3 = m(x_3 - x_1) + y_1$
 
 最终 $R' = (x_3, -y_3) = (m^2 - x_1 - x_2, m(x_1 - x_3) - y_1)$
 
@@ -249,15 +247,11 @@ $$
 
 例如 $𝔽_5=\{0, 1, 2, 3, 4\}$, 表示 $x$ 和 $y$ 坐标的值只能是 $\{0,1,2,3,4\}$ 中的一个。
 
-取模 $p$ 的有限域椭圆曲线方程为 $y^2 = x^3 + ax + b \mod p$, 记作 $E_{p}(a,b)$。例如: $E_{5}(1, 1): y^2 = x^3 + x + 1\ mod\ 5$
+取模 $p$ 的有限域椭圆曲线方程为 $y^2 = x^3 + ax + b \mod p$, 记作 $E_{p}(a,b)$。例如: $E_{5}(1, 1): y^2 = x^3 + x + 1\mod\ 5$
 
 计算有限域椭圆曲线上的点时, 首先是确定 $p$ 的值。然后通过 $x$ 的值计算 $y$ 的值，如果 $y$ 的值不在 $0$ 到 $p-1$ 之间, 则为无效点。
 
-<FiniteEccGraph />
-
-从图中可以看出, 相同 $x$ 坐标, 在 $p$ 的范围内会有一个关于 $\frac {p}{2}$ 的对称点。
-
-例如 $E_{5}(1, 1): y^2 = x^3 +x + 1\ mod\ 5, 𝔽_5=\{0, 1, 2, 3, 4\}$,
+例如 $E_{5}(1, 1): y^2 = x^3 +x + 1\mod\ 5, 𝔽_5=\{0, 1, 2, 3, 4\}$,
 
 由于 $x$ 和 $y$ 的取值是在有限域中整数，因此对于上式中有多个可组合的点：
 
@@ -267,17 +261,21 @@ $$
 
 如此遍历下去，便能确定最终的有效点为$(0, 1)\ (0,4)\ (2, 1)\ (2, 4), \ (3, 1)\ (3, 4)\ (4,2)\ (4,3)$
 
+<FiniteEccGraph p={5} />
+
+从图中可以看出, 相同 $x$ 坐标, 会有一个关于 $\frac {p}{2}$ 的对称点。
+
 ### 点加
 
 有限域椭圆曲线的点加是椭圆曲线密码学的核心。
 
 已知点 $P(x_1, y_1)$ 和点 $Q(x_2, y_2)$ 是有限域椭圆曲线上的两个点, 计算这两个点的和 $P + Q$ 的步骤如下：
 
-计算斜率 <InlineMath formula='m = \frac{y_2 - y_1}{x_2 - x_1} \ mod \ p'/>, 如果 $P = Q$，则 <InlineMath formula='m = \frac{3x_1^2 + a}{2y_1} \ mod \ p'/>
+计算斜率 <InlineMath formula='m = \frac{y_2 - y_1}{x_2 - x_1} \mod \ p'/>, 如果 $P = Q$，则 <InlineMath formula='m = \frac{3x_1^2 + a}{2y_1} \mod \ p'/>
 
 在实数域上的椭圆曲线加法, 需要计算 $P$ 和 $Q$ 连接的直线与椭圆曲线的交点 `R`, 在有限域椭圆曲线上同理。
 
-假设有限域椭圆曲线$E_{127}(-1, 3): y^2=x^3 -x +3 \ mod \ 127$
+假设有限域椭圆曲线$E_{127}(-1, 3): y^2=x^3 -x +3 \mod \ 127$
 
 点$P=(16, 20)$, 点$Q =(41,120)$ 求 $P+Q$ 的坐标点$R'(x'， y')$
 
@@ -285,25 +283,25 @@ $$
 
 接着计算直线和曲线相交的第三个点的坐标$R(x, y)$, 按照之前推导的公式:
 
-$x_R = m^2 - x_P - x_Q \ mod\ p = 16-16-41 \ mod\ 127 = -41 \ mod\ 127 = 86$
+$x_R = m^2 - x_P - x_Q \mod \ p = 16-16-41 \mod\ 127 = -41 \mod\ 127 = 86$
 
-$y_R= m(x_R-x_P) + y_P  \ mod\ p = 4(86 - 16) + 20 \ mod\ 127 = 300\ mod\ 127 = 46$
+$y_R= m(x_R-x_P) + y_P  \mod \ p = 4(86 - 16) + 20 \mod\ 127 = 300\mod\ 127 = 46$
 
 $R'$ 是 $R$ 关于 $X$ 轴的对称点，所以
 
 <InlineMath formula={`x_{R'} = x_R = 86`} />, <InlineMath
-  formula={`y_{R'} = -y_R \ mod \ p = -46 \ mod \ 127 = 81`}
+  formula={`y_{R'} = -y_R \\mod p = -46 \\mod 127 = 81`}
 />
 
 所以 $P+Q = (86, 81)$
 
-### 倍乘
+### 点倍乘
 
 在实数域中的乘法定义为：$nP = P + P +\cdots + P$, 对$P$逐次累加计算。在有限域中同样可以这样计算。
 
 但在有限域中椭圆曲线中的乘法会存在一个循环。
 
-例如: 有限域椭圆曲线$E_{97}(2, 3): y^2=x^3+2x+3 \ mod\ 97$ 和点$P(3, 6)$
+例如: 有限域椭圆曲线$E_{97}(2, 3): y^2=x^3+2x+3 \mod\ 97$ 和点$P(3, 6)$
 
 - $1P = (3, 6)$
 - $2P = P + P = (80, 10)$
@@ -323,7 +321,7 @@ $R'$ 是 $R$ 关于 $X$ 轴的对称点，所以
 - 对每个因子计算 $nP$
 - 找到最小的且满足 $nP=O$ 的 $n$, $n$ 就是该点的阶
 
-对于椭圆曲线$E_{37}(-1, 3): y^2=x^3-x+3 \ mod\ 37$
+对于椭圆曲线$E_{37}(-1, 3): y^2=x^3-x+3 \mod\ 37$
 
 <FiniteEccGraph
   a={-1}
@@ -337,4 +335,10 @@ $1P\neq O, 2P\neq O,\cdots,7P=O$, 因此 $P$ 的阶是 7。
 
 ## 公私钥
 
-在椭圆曲线加密算法中，给定椭圆曲线 $E$ 和 曲线上的点 $G$。 计算出 $G$ 的阶为 $n$, 之后在$\{1,\cdots,n-1\}$ 中随机选择一个整数 $k$ 作为私钥，公钥$H=kG$。$H$ 为曲线上的一个有效点。
+在椭圆曲线加密算法中，给定椭圆曲线 $E$ 和 曲线上的基点 $G$。 计算出 $G$ 的阶为 $n$, 之后在$\{1,\cdots,n-1\}$ 中随机选择一个整数 $k$ 作为私钥，公钥$H=kG$。$H$ 为曲线上的一个有效点。
+
+在已知 $H$ 和 $G$ 的情况下，计算 $k$ 是一个困难的问题。因为计算 $k$ 并不能用简单的线性运算 $k=\frac{H}{G}$ 求出结果。
+
+$H$ 是 $k$ 个 $G$ 相加的结果, 这种加法的计算并不是简单的代数运算。如果直接给出一个点 $H$, 无法计算是由多少 $k$ 个 $G$ 点相加的结果。只能从 $1G, 2G, 3G, ...$ 如此不断地尝试, 直到结果等于 $H$, 才能得到 $k$。
+
+当 $k$ 是一个很大的数时, 这个过程的难度将变的非常大, 即使以现在最快的计算机, 尝试所有可能的 $k$ 值也需要远超过宇宙年龄的时间。 这就是为什么 `ECC` 安全性高的原因。
