--- a/content/cryptology/ecc/schnorr.mdx
+++ b/content/cryptology/ecc/schnorr.mdx
@@ -1,3 +1,23 @@
 ---
 title: Schnorr
 ---
+
+Schnorr 相对于 ECCSA 来说，更快速（没有求逆运算），并且可以实现多签。不过不像 ECDSA，Schnorr 不提供恢复签名者的公钥机制。
+
+通信双方 A 和 B, 已知椭圆曲线$E_p(a, b)$ 、基点$G$、 $G$的阶$n$，要签名的消息$m$。
+
+A 生成自己的公钥和私钥，即从$\{1,\cdots,n-1\}$随机选择一个数$k_A$作为私钥，公钥 $H_A=k_AG$
+
+A 签名过程如下:
+
+- 在$\{1,\cdots,n-1\}$ 中选择一个数 $k$
+- 计算点 $R$ 的坐标: $R = kG$
+- 将要签名的消息 $m$、$R$ 的 $x$ 坐标组合进行哈希运算, 得到 $e=\mathrm{Hash}(R||H_A||m) \mod n$
+- 计算 $s = k + e \cdot k_A \mod n$
+
+最终签名结果是 $(R_x, s)$。
+
+验证过程:
+
+- 计算哈希值 $e = H(R||H_A||m)$。
+- 验证 $R = s \cdot G - e \cdot Q$。
