--- a/content/cryptology/ecc/secp256k1.mdx
+++ b/content/cryptology/ecc/secp256k1.mdx
@@ -34,3 +34,5 @@ n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141
 ```
 
 从 `[1, n-1]` 中选择一个随机数 `k` 作为私钥，公钥 `Q = k * G`
+
+比特币的私钥和公钥基于 `Secp256k1` 椭圆曲线生成, 包括签名数据也是基于 `Secp256k1` 椭圆曲线。
