--- a/content/cryptology/ecc/ecdsa.mdx
+++ b/content/cryptology/ecc/ecdsa.mdx
@@ -1,3 +1,83 @@
 ---
 title: ECDSA
 ---
+
+椭圆曲线签名算法(Elliptic Curve Digital Signature Algorithm)简称 `ECDSA`, 是一种基于椭圆曲线的数字签名算法。
+
+通信双方 A 和 B, 已知椭圆曲线$E_p(a, b)$ 、基点$G$、 $G$的阶$n$，要签名的消息$h$。
+
+A 首先生成自己的公钥和私钥，即从$\{1,\cdots,n-1\}$随机选择一个数$k_A$作为私钥，公钥 $H_A=k_AG$
+
+A 签名过程如下:
+
+- 在$\{1,\cdots,n-1\}$ 中选择一个数 $k$。
+
+- 计算点 $R$ 的坐标: $R = kG$, 取 $R$ 的 $x$ 坐标为 $r$。 若 $r=0$, 则重新选择一个 $k$ 并重新计算
+
+- 计算 $s = k^{-1}(h + rk_A) \mod \ n$, 若 $s=0$, 则重新选择一个$k$ 并重新计算
+
+最后组合 $r$ 和 $s$ 即为最终的签名数据。
+
+:::warning
+
+$k^{-1}$ 表示在模 $n$ 下的乘法逆元。
+
+在普通的算数运算中, $k^{-1} = \frac {1} {k}$。但在模运算中, 如果一个数 $a$ 乘以另一个数 $b$, 在模 $n$ 的情况下结果等于1, 则 $b$ 就是 $a$ 的乘法逆元。
+
+例如: $3 \times 5 = 15 \mod 7 = 1$, 5 就是 3 在模 7 下的乘法逆元, 记为 $3^{-1} = 5$。反过来 3 也是 5 在模 7 下的乘法逆元, 记为 $5^{-1} = 3$。
+
+:::
+
+为了验证签名，需要将 A 的公钥 $H_A$, 消息哈希 $h$，签名数据$r$ 和 $s$ 发送给 B
+
+B 验证签名过程如下:
+
+- 计算$u_1 = s^{-1}h \mod \ n$
+- 计算$u_2 = s^{-1}r \mod \ n$
+- 计算$P = u_1G + u_2H_A$, 若 $P$ 的 $x$ 坐标等于 $r$ 则签名有效。
+
+有效性的证明
+
+$$
+\begin{aligned}
+P
+&= u_1G + u_2H_A \\
+&= u_1G + u_2k_AG \\
+&= (u_1 + u_2k_A)G \\
+&= (s^{-1}h + s^{-1}rk_A)G \\
+&= (h+rk_A)s^{-1}G
+\end{aligned}
+$$
+
+由于$s=k^{-1} (h+rk_A) \mod\ n$
+
+所以$P=(h+rk_A) \frac {k}{h+rk_A}G = kG$, 因此如果签名正确, 则 $P$ 的 $x$ 坐标等于 $r$。
+
+---
+
+下面将以一个实际的例子介绍 `ECDSA` 签名过程:
+
+已知椭圆曲线 $E_{17}(2,3): y^2=x^3+2x+3$
+
+<FiniteEccGraph
+  a={2}
+  b={3}
+  p={17}
+/>
+
+选择基点 $G=(5, 6)$, $G$ 的阶 $n=22$, 要签名的消息哈希 $h=Hash(message) = 33$
+
+A 签名
+
+- 在 $[1, 21]$ 选择 7 作为私钥，则公钥 $H=kG=7(5, 6)=(9, 6)$
+- 在 $[1, 21]$ 选择随机数 $k=5$
+- 计算 $P=kG = 5(5, 6) = (2, 7)$, 得到 $r=2$
+- 计算$s = k^{-1} (h+rk_A) \mod\ n = 9 * (33 + 2 * 7) \mod 22 = 423 \mod 22 = 5$
+- 发送$(r, s)$ 、A 的公钥$H_A$、消息$h$ 给 B
+
+B 验证签名
+
+- 计算$u_1=s^{-1}h \mod n = 9 * 33 \mod 22 = 11$
+- 计算$u_2 = s^{-1}r \mod n = 9 * 2 \mod 22 = 18$
+- 计算$R = u_1G + u_2H_A = 11(5, 6) + 18(9, 6) = (16, 0) + (12, 15) = (2, 7)$
+- 计算 $x_R \mod\ n = 2 \mod 22 =2 = r$, 签名合法
