--- a/content/cryptology/ecc/ecc.mdx
+++ b/content/cryptology/ecc/ecc.mdx
@@ -273,7 +273,7 @@ $$
 
 计算斜率 <InlineMath formula='m = \frac{y_2 - y_1}{x_2 - x_1} \mod \ p'/>, 如果 $P = Q$，则 <InlineMath formula='m = \frac{3x_1^2 + a}{2y_1} \mod \ p'/>
 
-在实数域上的椭圆曲线加法, 需要计算 $P$ 和 $Q$ 连接的直线与椭圆曲线的交点 `R`, 在有限域椭圆曲线上同理。
+在实数域上的椭圆曲线加法, 需要计算 $P$ 和 $Q$ 连接的直线与椭圆曲线的交点 $R$, 在有限域椭圆曲线上同理。
 
 假设有限域椭圆曲线$E_{127}(-1, 3): y^2=x^3 -x +3 \mod \ 127$
 
@@ -337,8 +337,8 @@ $1P\neq O, 2P\neq O,\cdots,7P=O$, 因此 $P$ 的阶是 7。
 
 在椭圆曲线加密算法中，给定椭圆曲线 $E$ 和 曲线上的基点 $G$。 计算出 $G$ 的阶为 $n$, 之后在$\{1,\cdots,n-1\}$ 中随机选择一个整数 $k$ 作为私钥，公钥$H=kG$。$H$ 为曲线上的一个有效点。
 
-在已知 $H$ 和 $G$ 的情况下，计算 $k$ 是一个困难的问题。因为计算 $k$ 并不能用简单的线性运算 $k=\frac{H}{G}$ 求出结果。
+在已知 $H$ 和 $G$ 的情况下，计算 $k$ 是非常困难的。因为计算 $k$ 并不能用简单的线性运算 $k=\frac{H}{G}$ 求出结果。
 
-$H$ 是 $k$ 个 $G$ 相加的结果, 这种加法的计算并不是简单的代数运算。如果直接给出一个点 $H$, 无法计算是由多少 $k$ 个 $G$ 点相加的结果。只能从 $1G, 2G, 3G, ...$ 如此不断地尝试, 直到结果等于 $H$, 才能得到 $k$。
+$H$ 是 $k$ 个 $G$ 相加的结果, 这种加法的计算并不是简单的代数运算。如果直接给出一个点 $H$, 无法直接计算是由多少 $k$ 个 $G$ 点相加的结果。只能从 $1G, 2G, 3G, ...$ 如此不断地尝试, 直到结果等于 $H$, 才能得到 $k$。
 
-当 $k$ 是一个很大的数时, 这个过程的难度将变的非常大, 即使以现在最快的计算机, 尝试所有可能的 $k$ 值也需要远超过宇宙年龄的时间。 这就是为什么 `ECC` 安全性高的原因。
+当 $k$ 是一个很大的数时, 这个过程的难度将变的非常大, 即使以现在最快的计算机, 尝试所有可能的 $k$ 值也需要远超过宇宙年龄的时间。 这也是为什么 `ECC` 安全性高的原因。
