--- a/content/cryptology/ecc/schnorr.mdx
+++ b/content/cryptology/ecc/schnorr.mdx
@@ -2,11 +2,11 @@
 title: Schnorr
 ---
 
-`Schnorr` 签名基于有限域椭圆曲线, 与 `ECDSA` 类似, 但是 `Schnorr` 相对于 `ECDSA` 来说, 更快速(没有求逆运算), 并且可以实现多签。
+`Schnorr` 签名基于有限域椭圆曲线, 与 `ECDSA` 类似, 但是 `Schnorr` 相对于 `ECDSA` 来说, 更快速, 并且可以实现多签聚合。
 
-通信双方 A 和 B, 已知椭圆曲线$E_p(a, b)$ 、基点$G$、 $G$的阶$n$，要签名的消息$m$。
+通信双方 A 和 B, 已知椭圆曲线 $E_p(a, b)$ 、基点 $G$、 $G$ 的阶 $n$，要签名的消息 $m$。
 
-A 生成自己的公钥和私钥，即从$\{1,\cdots,n-1\}$随机选择一个数$k_A$作为私钥，公钥 $H_A=k_AG$
+A 生成自己的公钥和私钥，即从 $\{1,\cdots,n-1\}$ 随机选择一个数 $k_A$ 作为私钥，公钥 $H_A=k_AG$
 
 A 签名过程如下:
 
@@ -54,11 +54,11 @@ $$
 
 聚合签名的过程如下:
 
-- 对于每一个签名的参与者使用同一种椭圆曲线和基点, 生成各自的私钥 $k_m$ 和公钥 $P_i$。
+- 对于每一个签名的参与者使用同一种椭圆曲线和基点 $G$, 生成各自的私钥 $k_m$ 和公钥 $P_i$。
 
 - 每个参与者选择不同的随机数 $k_i$, 并计算对应的 $R_i = k_iG$
 
-- 与单签不同的, 聚合签名计算 $e$ 时需要每一个签名参与者的公钥聚合, 以及 $R_i$ 聚合。公钥和 $R_i$ 都是有限域椭圆曲线上的点。聚合最简单的方式点加: 将 $P_i$ 依次相加得到聚合公钥点 $P_{agg} = \sum P_i$, 将 $R_i$ 依次相加得到聚合点 $R_{agg} = \sum R_i$
+- 与单签不同的, 聚合签名计算 $e$ 时需要每一个签名参与者的公钥聚合, 以及 $R_i$ 聚合。公钥和 $R_i$ 都是有限域椭圆曲线上的点。聚合最简单的方式是点加: 将 $P_i$ 依次相加得到聚合公钥点 $P_{agg} = \sum P_i$, 将 $R_i$ 依次相加得到聚合点 $R_{agg} = \sum R_i$
 
 - 计算哈希值 $e = \mathrm{Hash}(R_{agg} \ || \ P_{agg}|| \ m)$
 
@@ -70,12 +70,29 @@ $$
 
 验证聚合签名时, 只需验证等式 $s_{agg}G = R_{agg} + eP_{agg}$ 是否成立。
 
-:::warning ECDSA 无法多签聚合的原因
+:::note ECDSA 无法多签聚合的原因
 
-有两个签名: $s_1 = k_1^{-1}(m + r_1k_1) \mod n$, $s_2 = k_2^{-1}(m + r_2k_2) \mod n$
+有两个签名数据:
 
-如果直接计算聚合签名: $s_agg = s_1 + s_ 2 = k^{-1}(m + r_1k_1) + k^{-1}(m + r_2k_2) \mod n$
+- $r_1=k_1G$, $s_1 = k_1^{-1}(m + r_1k_{u1}) \mod n$
 
-在验证聚合签名 $R_{agg} = s_{agg}^{-1} \dot m \dot G + s\_{agg}^{-1} \dot r_{agg}$
+- $r_2=k_2G$, $s_2 = k_2^{-1}(m + r_2k_{u2}) \mod n$
+
+聚合 $r$ 和 $s$:
+
+- $r_{agg} = r_1 + r_2$
+- $s_{agg} = s_1 + s_ 2 = k_1^{-1}(m + r_1k_{u1}) + k_2^{-1}(m + r_2k_{u2}) \mod n$
+
+签名数据 $(r_{agg}, s_{agg})$
+
+问题在于 $s$ 无法聚合。因为 $s_1$ 和 $s_2$ 中包含了 $k_1^{-1}$ 和 $k_2^{-1}$ 。
+
+假设 $s_1 = k_1^{-1} \cdot A$, $s_2 = k_2^{-1} \cdot B$
+
+那么 $s_{agg} = s_1 + s_2 = k_1^{-1} \cdot A + k_2^{-1} \cdot B = (k_2 \cdot A + k_1 \cdot B) / (k_1 \cdot k_2)$
+
+那么在验证者在验证时, 无法知道 $k_1$ 和 $k_2$ 的值用来重构出 $u_1$ 和 $u_2$ 。
+
+而 `Schnorr` 签名中, 没有求逆运算, 可以直接聚合 $s$。
 
 :::
