feat: ecc with default G

--- a/content/cryptology/ecc/ecc.mdx
+++ b/content/cryptology/ecc/ecc.mdx
@@ -295,6 +295,14 @@ $R'$ 是 $R$ 关于 $X$ 轴的对称点，所以
 
 所以 $P+Q = (86, 81)$
 
+<FiniteEccGraph
+  a={-1}
+  b={3}
+  p={127}
+  P={{ x: 16, y: 20 }}
+  Q={{ x: 41, y: 120 }}
+/>
+
 ### 点倍乘
 
 在实数域中的乘法定义为：$nP = P + P +\cdots + P$, 对$P$逐次累加计算。在有限域中同样可以这样计算。
@@ -327,6 +335,10 @@ $R'$ 是 $R$ 关于 $X$ 轴的对称点，所以
   a={-1}
   b={3}
   p={37}
+  G={{
+    x: 2,
+    y: 3
+  }}
 />
 
 共有 42 个点，因此 $N = 42$。42 的因子有 $1,2,3,6,7,14,21,42$ 依次与点$P(2,3)$ 相乘
