feat: text fill

--- a/content/cryptology/ecc/ecc.mdx
+++ b/content/cryptology/ecc/ecc.mdx
@@ -121,7 +121,7 @@ $$
 
 对于三次方程$x^3+px^2+qx+r=0$, 根据韦达定理,其根 $x_1, x_2, x_3$ 满足 $x_1+x_2+x_3=-p$
 
-最后的推导中 $p=m^2$, 故 $x_3=m^2-x_1-x_2$, 代入得到 $y_3=m(x_3-x_1)+y_1$
+根据推导 $p=m^2$, 故 $x_3=m^2-x_1-x_2$, 代入得到 $y_3=m(x_3-x_1)+y_1$
 
 最终 $R' = (x_3, -y_3) = (m^2 - x_1 - x_2, m(x_1 - x_3) - y_1)$
 
