--- a/content/cryptology/ecc/ecdsa.mdx
+++ b/content/cryptology/ecc/ecdsa.mdx
@@ -4,7 +4,7 @@ title: ECDSA
 
 椭圆曲线签名算法(Elliptic Curve Digital Signature Algorithm)简称 `ECDSA`, 是一种基于椭圆曲线的数字签名算法。
 
-现有通信双方 A 和 B, 已知椭圆曲线 $E_p(a, b)$ 、基点 $G$、 $G$ 的阶 $n$, 要签名的消息 $m$。
+假设有通信双方 A 和 B, 已知椭圆曲线 $E_p(a, b)$ 、基点 $G$、 $G$ 的阶 $n$, 要签名的消息 $m$。
 
 A 首先生成自己的私钥和公钥, 即从 $\{1,\cdots,n-1\}$ 随机选择一个数 $k_A$ 作为私钥, 公钥 $H_A=k_AG$
 
@@ -55,7 +55,7 @@ $$
 
 ---
 
-下面将以一个实际的例子介绍 `ECDSA` 签名过程:
+以一个实际的例子介绍 `ECDSA` 签名过程:
 
 已知椭圆曲线 $E_{17}(2,3): y^2=x^3+2x+3$
 
