--- a/content/cryptology/ecc/schnorr.mdx
+++ b/content/cryptology/ecc/schnorr.mdx
@@ -4,7 +4,7 @@ title: Schnorr
 
 `Schnorr` 签名基于有限域椭圆曲线, 与 `ECDSA` 类似, 但是 `Schnorr` 相对于 `ECDSA` 来说, 更快速, 并且可以实现多签聚合。
 
-通信双方 A 和 B, 已知椭圆曲线 $E_p(a, b)$ 、基点 $G$、 $G$ 的阶 $n$，要签名的消息 $m$。
+假设有通信双方 A 和 B, 已知椭圆曲线 $E_p(a, b)$ 、基点 $G$、 $G$ 的阶 $n$，要签名的消息 $m$。
 
 A 生成自己的公钥和私钥，即从 $\{1,\cdots,n-1\}$ 随机选择一个数 $k_A$ 作为私钥，公钥 $H_A=k_AG$
 
@@ -23,7 +23,7 @@ A 签名过程如下:
 
 :::
 
-已知要消息的消息 $m$ 、签名数据 $(R_x, s)$、A 的公钥 $H_A$, B 验证过程如下:
+已知要签名的消息 $m$ 、签名数据 $(R_x, s)$、A 的公钥 $H_A$, B 验证过程如下:
 
 - 计算哈希值 $e = \mathrm{Hash}(R_x \ || \ H_A|| \ m)$。
 - 验证等式: $sG = R_x + eH_A$ 是否成立。
@@ -45,12 +45,12 @@ $$
 :::warning 与 ECDSA 的区别
 
 - `ECDSA` 签名过程需要计算 $k^{-1}$ 求模逆元, 而 `Schnorr` 签名直接计算 $s = k + e \cdot k_A \mod n$, 没有求逆运算, 运算速度更快
-- `ECDSA` 签名验证需要两次标量乘法 $u_1G$ 和 $u_2H_A$, 而 `Schnorr` 签名验证只需要验证 $sG = R + eP$, 运算过程更简单。
-- `Schnorr` 支持多个签名聚合。
+- `ECDSA` 签名验证需要两次标量乘法 $u_1G$ 和 $u_2H_A$, 而 `Schnorr` 签名验证只需要验证 $sG = R + eP$, 运算过程更简单
+- `Schnorr` 支持多个签名聚合
 
 :::
 
-`Schnorr` 另一个重要的特征是聚合签名。聚合签名表示将多个签名数据聚合成一个签名数据, 从而减少总签名数据的大小, 降低交易费用。
+`Schnorr` 另一个重要的特征是聚合签名。聚合签名用于将多个签名数据聚合成一个签名数据, 从而减少总签名数据的大小, 降低交易费用。
 
 聚合签名的过程如下:
 
@@ -72,7 +72,7 @@ $$
 
 :::note ECDSA 无法多签聚合的原因
 
-有两个签名数据:
+假设现有两个 `ECDSA` 签名数据:
 
 - $r_1=k_1G$, $s_1 = k_1^{-1}(m + r_1k_{u1}) \mod n$
 
@@ -91,8 +91,8 @@ $$
 
 那么 $s_{agg} = s_1 + s_2 = k_1^{-1} \cdot A + k_2^{-1} \cdot B = (k_2 \cdot A + k_1 \cdot B) / (k_1 \cdot k_2)$
 
-那么在验证者在验证时, 无法知道 $k_1$ 和 $k_2$ 的值用来重构出 $u_1$ 和 $u_2$ 。
+在验证者在验证签名时, 无法知道 $k_1$ 和 $k_2$ 的值用来重构出 $u_1$ 和 $u_2$, 从而导致验证失败。
 
-而 `Schnorr` 签名中, 没有求逆运算, 可以直接聚合 $s$。
+而在 `Schnorr` 签名中, 由于没有求模逆元运算, 则可以直接聚合 $s$。
 
 :::
