--- a/content/cryptology/ecc/schnorr.mdx
+++ b/content/cryptology/ecc/schnorr.mdx
@@ -85,13 +85,7 @@ $$
 
 签名数据 $(r_{agg}, s_{agg})$
 
-问题在于 $s$ 无法聚合。因为 $s_1$ 和 $s_2$ 中包含了 $k_1^{-1}$ 和 $k_2^{-1}$ 。
-
-假设 $s_1 = k_1^{-1} \cdot A$, $s_2 = k_2^{-1} \cdot B$
-
-那么 $s_{agg} = s_1 + s_2 = k_1^{-1} \cdot A + k_2^{-1} \cdot B = (k_2 \cdot A + k_1 \cdot B) / (k_1 \cdot k_2)$
-
-在验证者在验证签名时, 无法知道 $k_1$ 和 $k_2$ 的值用来重构出 $u_1$ 和 $u_2$, 从而导致验证失败。
+问题在于 $s$ 无法聚合。因为 $s_1$ 和 $s_2$ 中包含了 $k_1^{-1}$ 和 $k_2^{-1}$ 这样的求模逆元运算, 使签名具有非线性特征。
 
 而在 `Schnorr` 签名中, 由于没有求模逆元运算, 则可以直接聚合 $s$。
 
