--- a/content/cryptology/ecc/ecdsa.mdx
+++ b/content/cryptology/ecc/ecdsa.mdx
@@ -84,4 +84,4 @@ B 验证签名
 - 计算$u_1=s^{-1}m \mod n = 9 * 33 \mod 22 = 11$
 - 计算$u_2 = s^{-1}r \mod n = 9 * 2 \mod 22 = 18$
 - 计算$R = u_1G + u_2H_A = 11(5, 6) + 18(9, 6) = (16, 0) + (12, 15) = (2, 7)$
-- 计算 $x_R \mod\ n = 2 \mod 22 =2 = r$, 签名合法
+- $R$ 的 $x$ 坐标等于 $r$, 签名有效
